--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
             <sidebar-textarea title="Дефект*" height="82"></sidebar-textarea>
         </sidebar-wrapp>
         <sidebar-wrapp header="TEST">
-            <sidebar-header>
-                <div class="sidebar-subheader">Сохранение созданного проекта через камеру</div>
+            <sidebar-header title="Данные теста">
+                <div class="sidebar-subheader">Укажите зависимость</div>
             </sidebar-header>
             <sidebar-text>
                 Теперь рассмотрим определение требований с использованием понятия "Use Case". Как уже говорилось ранее, в стандарте UML отсутствует привязка к стадиям создания АС, однако, производители CASE - средств для работы с UML и методологий использования UML, как правило, предлагают схожие подходы к работе с требованиями.
