--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <step-save-btn></step-save-btn>
             </step-header>
             <step-content>
-                <sidebar-textinput title="Название шага"  placeholder="Старт работы с приложением"></sidebar-textinput>
+                <sidebar-textinput title="Название шага" placeholder="Старт работы с приложением"></sidebar-textinput>
                 <sidebar-textarea title="Действие" height="102"></sidebar-textarea>
                 <sidebar-textarea title="Данные теста" height="102"></sidebar-textarea>
                 <sidebar-textarea title="Ожидаемый результат" height="102"></sidebar-textarea>
@@ -331,7 +331,8 @@
                 <div class="sidebar-subheader">Укажите зависимость</div>
             </sidebar-header>
             <sidebar-text>
-                Теперь рассмотрим определение требований с использованием понятия "Use Case". Как уже говорилось ранее, в стандарте UML отсутствует привязка к стадиям создания АС, однако, производители CASE - средств для работы с UML и методологий использования UML, как правило, предлагают схожие подходы к работе с требованиями.
+                Теперь рассмотрим определение требований с использованием понятия "Use Case". Как уже говорилось ранее, в стандарте UML отсутствует привязка к стадиям создания АС, однако, производители CASE - средств для работы с UML и методологий использования UML,
+                как правило, предлагают схожие подходы к работе с требованиями.
             </sidebar-text>
         </sidebar-wrapp>
         <navbar-vertical>
@@ -384,7 +385,7 @@
             <project-case name="Создание одного проэкта" properties="Дата начала: 18/март/17, Build: 2, Enviroment: QA1" done="20%" to-do="80%">
                 <project-case-table img="" identifire="ID" name="Имя" status="Статус" blocker="Блокер" defect="Дефект" component="Компонент" label="Label">
                     <project-case-row img="" identifire="VVR-1" name="Запись проекта через камеру" status="Статус" blocker="vvr-1" defect="Не кликабел..." component="camera screen" label="mobile, camera"></project-case-row>
-                    <project-case-row img="" identifire="VVR-1" name="Запись проекта через камеру" status="Статус" blocker="vvr-1" defect="Не кликабел..." component="camera screen" label="mobile, camera"></project-case-row>
+                    <project-case-row img="" identifire="VVR-2" name="Запись проекта через камеру" status="Статус" blocker="vvr-1" defect="Не кликабел..." component="camera screen" label="mobile, camera"></project-case-row>
                 </project-case-table>
             </project-case>
         </create-test>
