--- a/index.html
+++ b/index.html
@@ -403,8 +403,9 @@
             </step-header>
             <project-case name="Создание одного проэкта" properties="Дата начала: 18/март/17, Build: 2, Enviroment: QA1" done="20%" to-do="80%">
                 <project-case-table img="" identifire="ID" name="Имя" status="Статус" blocker="Блокер" defect="Дефект" component="Компонент" label="Label">
-                    <project-case-row img="" identifire="VVR-1" name="Запись проекта через камеру" status="Статус" blocker="vvr-1" defect="Не кликабел..." component="camera screen" label="mobile, camera"></project-case-row>
-                    <project-case-row img="" identifire="VVR-2" name="Запись проекта через камеру" status="Статус" blocker="vvr-1" defect="Не кликабел..." component="camera screen" label="mobile, camera"></project-case-row>
+                    <project-case-row img="/components/project-info/img/test.png" identifire="VVR-1" name="Запись проекта через камеру" status="blocked" blocker="vvr-1" defect="Не кликабел..." component="camera screen" label></project-case-row>
+                    <project-case-row img="/components/project-info/img/test.png" identifire="VVR-2" name="Запись проекта через камеру" status="failed" blocker="vvr-1" defect="Не кликабел..." component="camera screen" label="mobile, camera"></project-case-row>
+                    <project-case-row img="/components/project-info/img/test.png" identifire="VVR-3" neme status="pass" blocker="vvr-1" defect="Не кликабел..." component="camera screen" label="mobile, camera"></project-case-row>
                 </project-case-table>
             </project-case>
         </create-test>
@@ -427,9 +428,5 @@
         </navbar-vertical>
     </div>
 </body>
-<<<<<<< HEAD
 
 </html>
-=======
-</html>
->>>>>>> 08e158888822190db3b815c94ed83b9a6be2357f
