vert navbar enable

--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
         <navbar-vertical>
             <navbar-vertical-item title="проект"></navbar-vertical-item>
             <navbar-vertical-item title="доступно"></navbar-vertical-item>
-            <navbar-vertical-item title="блокеры"></navbar-vertical-item>
-            <navbar-vertical-item title="связанные требования"></navbar-vertical-item>
+            <navbar-vertical-item enable title="блокеры"></navbar-vertical-item>
+            <navbar-vertical-item enable title="связанные требования"></navbar-vertical-item>
             <navbar-vertical-item title="тест кейсы"></navbar-vertical-item>
             <navbar-vertical-item title="файлы "></navbar-vertical-item>
         </navbar-vertical>
