--- a/index.html
+++ b/index.html
@@ -465,6 +465,14 @@
 
     </div>
     <div class="container">
+        <navbar-vertical>
+            <navbar-vertical-item title="проект"></navbar-vertical-item>
+            <navbar-vertical-item title="доступно"></navbar-vertical-item>
+            <navbar-vertical-item title="блокеры"></navbar-vertical-item>
+            <navbar-vertical-item title="связанные требования"></navbar-vertical-item>
+            <navbar-vertical-item title="зрители"></navbar-vertical-item>
+            <navbar-vertical-item title="файлы "></navbar-vertical-item>
+        </navbar-vertical>
         <sidebar-wrapp>
             <sidebar-header title="Шаги теста">
                 <div class="sidebar-subheader">Сохранение проекта созданного через камеру</div>
@@ -474,6 +482,14 @@
             <step-status title="Шаг 3" description="Добавление меток" status="blocked"></step-status>
             <step-status title="Шаг 4" description="Результат" status="blocked"></step-status>
         </sidebar-wrapp>
+        <navbar-vertical>
+            <navbar-vertical-item title="проект"></navbar-vertical-item>
+            <navbar-vertical-item title="доступно"></navbar-vertical-item>
+            <navbar-vertical-item title="блокеры"></navbar-vertical-item>
+            <navbar-vertical-item title="связанные требования"></navbar-vertical-item>
+            <navbar-vertical-item title="зрители"></navbar-vertical-item>
+            <navbar-vertical-item title="файлы "></navbar-vertical-item>
+        </navbar-vertical>
     </div>
 </body>
 
