--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@
                 <div class="sidebar-subheader">Сохранение созданного проекта через камеру</div>
             </sidebar-header>
             <project-info-block title="Основаня информация">
-                <project-info-item title="Тип" value="Ручной" img="components/project-info/img/test.png"></project-info-item>
-                <project-info-item title="Версия" value="Итерация 1"></project-info-item>
+                <project-info-item round="disc" title="Тип" value="Ручной" img="components/project-info/img/test.png"></project-info-item>
+                <project-info-item round="round" title="Версия" value="Итерация 1"></project-info-item>
                 <project-info-item title="Folder" value="Создание одного проекта"></project-info-item>
                 <project-info-item title="Приоритет" value="Средний"></project-info-item>
                 <project-info-item title="Фиксированная величина" value="0.4"></project-info-item>
