One more custom element + modefications

--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
             </sidebar-header>
             <project-info-block title="FRONTEND">
                 <dropdown-block dropped>
-                    <blocker-person name="Александр Анисимов" specialization="CSS"></blocker-person>
-                    <blocker-person name="Александр Анисимов" specialization="java"></blocker-person>
-                    <blocker-person name="Александр Анисимов" specialization="java"></blocker-person>
-                    <blocker-person name="Александр Анисимов" specialization="CSS"></blocker-person>
+                    <blocker-person name="Александр Анисимов" specialization="CSS" img="components/project-info/img/test.png"></blocker-person>
+                    <blocker-person name="Александр Анисимов" specialization="java" img="components/project-info/img/test.png"></blocker-person>
+                    <blocker-person name="Александр Анисимов" specialization="java" img="components/project-info/img/test.png"></blocker-person>
+                    <blocker-person name="Александр Анисимов" specialization="CSS" img="components/project-info/img/test.png"></blocker-person>
                 </dropdown-block>
             </project-info-block>
             <project-info-block title="DESIGNER">
                 <dropdown-block>
-                    <blocker-person name="Александр Анисимов" specialization="artdirector"></blocker-person>
-                    <blocker-person name="Александр Анисимов" specialization="junior designer"></blocker-person>
-                    <blocker-person name="Александр Анисимов" specialization="3d"></blocker-person>
-                    <blocker-person name="Александр Анисимов" specialization="ui"></blocker-person>
+                    <blocker-person name="Александр Анисимов" specialization="artdirector" img="components/project-info/img/test.png"></blocker-person>
+                    <blocker-person name="Александр Анисимов" specialization="junior designer" img="components/project-info/img/test.png"></blocker-person>
+                    <blocker-person name="Александр Анисимов" specialization="3d" img="components/project-info/img/test.png"></blocker-person>
+                    <blocker-person name="Александр Анисимов" specialization="ui" img="components/project-info/img/test.png"></blocker-person>
                 </dropdown-block>
             </project-info-block>
         </sidebar-wrapp>
@@ -88,18 +88,18 @@
             </project-info-block>
             <project-info-block title="исполнитель">
                 <dropdown-block dropped>
-                    <blocker-person name="Заболуев Д.Л" specialization="Frontend"></blocker-person>
-                    <blocker-person name="Матвийчук О.С" specialization="designer"></blocker-person>
-                    <blocker-person name="Васильченко С.В" specialization="CSS"></blocker-person>
-                    <blocker-person name="Заболуев Д.Л" specialization="Frontend"></blocker-person>
-                    <blocker-person name="Матвийчук О.С" specialization="designer"></blocker-person>
-                    <blocker-person name="Васильченко С.В" specialization="CSS"></blocker-person>
-                    <blocker-person name="Заболуев Д.Л" specialization="Frontend"></blocker-person>
-                    <blocker-person name="Матвийчук О.С" specialization="designer"></blocker-person>
-                    <blocker-person name="Васильченко С.В" specialization="CSS"></blocker-person>
-                    <blocker-person name="Заболуев Д.Л" specialization="Frontend"></blocker-person>
-                    <blocker-person name="Матвийчук О.С" specialization="designer"></blocker-person>
-                    <blocker-person name="Васильченко С.В" specialization="CSS"></blocker-person>
+                    <blocker-person name="Заболуев Д.Л" specialization="Frontend" img="components/project-info/img/test.png"></blocker-person>
+                    <blocker-person name="Матвийчук О.С" specialization="designer" img="components/project-info/img/test.png"></blocker-person>
+                    <blocker-person name="Васильченко С.В" specialization="CSS" img="components/project-info/img/test.png"></blocker-person>
+                    <blocker-person name="Заболуев Д.Л" specialization="Frontend" img="components/project-info/img/test.png"></blocker-person>
+                    <blocker-person name="Матвийчук О.С" specialization="designer" img="components/project-info/img/test.png"></blocker-person>
+                    <blocker-person name="Васильченко С.В" specialization="CSS" img="components/project-info/img/test.png"></blocker-person>
+                    <blocker-person name="Заболуев Д.Л" specialization="Frontend" img="components/project-info/img/test.png"></blocker-person>
+                    <blocker-person name="Матвийчук О.С" specialization="designer" img="components/project-info/img/test.png"></blocker-person>
+                    <blocker-person name="Васильченко С.В" specialization="CSS" img="components/project-info/img/test.png"></blocker-person>
+                    <blocker-person name="Заболуев Д.Л" specialization="Frontend" img="components/project-info/img/test.png"></blocker-person>
+                    <blocker-person name="Матвийчук О.С" specialization="designer" img="components/project-info/img/test.png"></blocker-person>
+                    <blocker-person name="Васильченко С.В" specialization="CSS" img="components/project-info/img/test.png"></blocker-person>
                 </dropdown-block>
             </project-info-block>
             <project-info-block title="спринт">
@@ -195,7 +195,7 @@
             <step-status title="Шаг 1" description="Старт работы с приложением" status="pass"></step-status>
             <step-status title="Шаг 2" description="Нажатие на кнопку" status="failed"></step-status>
             <step-status title="Шаг 3" description="Добавление меток" status="blocked"></step-status>
-            <step-status title="Шаг 4" description="Результат" status="blocked"></step-status>
+            <step-status title="Шаг 4" description="Результат" status="to do"></step-status>
         </sidebar-wrapp>
 
         <create-test>
@@ -229,16 +229,16 @@
                 </blocker-choosen>
                 <project-info-block title="РУКОВОДЯЩИЙ ПЕРСОНАЛ">
                     <dropdown-block>
-                        <blocker-person name="Александр Анисимов" specialization="css"></blocker-person>
-                        <blocker-person name="Александр Анисимов" specialization="css"></blocker-person>
-                        <blocker-person name="Александр Анисимов" specialization="css"></blocker-person>
+                        <blocker-person name="Александр Анисимов" specialization="css" img="components/project-info/img/test.png"></blocker-person>
+                        <blocker-person name="Александр Анисимов" specialization="css" img="components/project-info/img/test.png"></blocker-person>
+                        <blocker-person name="Александр Анисимов" specialization="css" img="components/project-info/img/test.png"></blocker-person>
                     </dropdown-block>
                 </project-info-block>
                 <project-info-block title="FRONTEND">
                     <dropdown-block>
-                        <blocker-person name="Александр Анисимов" specialization="css"></blocker-person>
-                        <blocker-person name="Александр Анисимов" specialization="css"></blocker-person>
-                        <blocker-person name="Александр Анисимов" specialization="css"></blocker-person>
+                        <blocker-person name="Александр Анисимов" specialization="css" img="components/project-info/img/test.png"></blocker-person>
+                        <blocker-person name="Александр Анисимов" specialization="css" img="components/project-info/img/test.png"></blocker-person>
+                        <blocker-person name="Александр Анисимов" specialization="css" img="components/project-info/img/test.png"></blocker-person>
                     </dropdown-block>
                 </project-info-block>
                 <sidebar-select title="Команда">
@@ -355,14 +355,6 @@
                 Сохранение проекта созданного через камеру
             </project-info-block>
         </sidebar-wrapp>
-        <sidebar-wrapp>
-            <sidebar-header title="Шаги теста">
-                <div class="sidebar-subheader">Добавьте шаги и заполните поля</div>
-            </sidebar-header>
-
-
-        </sidebar-wrapp>
-
         <create-test>
             <step-header title="Шаг 2">
                 <div class="step-header-subheader">Создание тест кейса</div>
@@ -427,7 +419,7 @@
             <navbar-vertical-item title="зрители"></navbar-vertical-item>
             <navbar-vertical-item title="файлы "></navbar-vertical-item>
         </navbar-vertical>
-        <sidebar-wrapp>
+        <!--<sidebar-wrapp>
             <sidebar-header title="Шаги теста">
                 <div class="sidebar-subheader">Добавьте шаги и заполните поля</div>
                 <choose-btn title="Добавить"></choose-btn>
@@ -439,7 +431,7 @@
             <info-message>
                 <div class="info-message__text">Вы можете установить последовательность перетакскивая шаги</div>
             </info-message>
-        </sidebar-wrapp>
+        </sidebar-wrapp>-->
         <create-test>
             <step-header title="Тест кейсы">
                 <div class="step-header-subheader">Группы</div>
@@ -449,8 +441,8 @@
             <project-case name="Создание одного проэкта" properties="Дата начала: 18/март/17, Build: 2, Enviroment: QA1" done="20%" to-do="80%">
                 <project-case-table img="" identifire="ID" name="Имя" status="Статус" blocker="Блокер" defect="Дефект" component="Компонент" label="Label">
                     <project-case-row img="/components/project-info/img/test.png" identifire="VVR-1" name="Запись проекта через камеру" status="blocked" blocker="vvr-1" defect="Не кликабел..." component="camera screen" label></project-case-row>
-                    <project-case-row img="/components/project-info/img/test.png" identifire="VVR-2" name="Запись проекта через камеру" status="failed" blocker="vvr-1" defect="Не кликабел..." component="camera screen" label="mobile, camera"></project-case-row>
-                    <project-case-row img="/components/project-info/img/test.png" identifire="VVR-3" neme status="pass" blocker="vvr-1" defect="Не кликабел..." component="camera screen" label="mobile, camera"></project-case-row>
+                    <project-case-row img="/components/project-info/img/test.png" identifire="VVR-2" name="Запись проекта через камеру" status="pass" blocker="vvr-1" defect="Не кликабел..." component="camera screen" label="mobile, camera"></project-case-row>
+                    <project-case-row img="/components/project-info/img/test.png" identifire="VVR-3" neme status="to do" blocker="vvr-1" defect="Не кликабел..." component="camera screen" label="mobile, camera"></project-case-row>
                 </project-case-table>
             </project-case>
         </create-test>
@@ -462,6 +454,26 @@
             <requirement-card></requirement-card>
             <requirement-card></requirement-card>
             <requirement-card></requirement-card>
+        </sidebar-wrapp>
+        <sidebar-wrapp>
+            <sidebar-header title="История прохождения">
+                <div class="sidebar-subheader">Cохранение проекта созданного через камеру</div>
+            </sidebar-header>
+            <project-info-block>
+                <project-info-item title="Дата проведения" value="2015-05-10"></project-info-item>
+                <project-info-item title="Статус" value="blocked"></project-info-item>
+            </project-info-block>
+            <project-info-block>
+                <project-info-item title="Дата проведения" value="2015-04-10"></project-info-item>
+                <project-info-item title="Статус" value="to do"></project-info-item>
+                <project-info-item title="Блокер" value="Шаг 3"></project-info-item>
+                <sidebar-text header="Название шага">
+                    Добавление меток
+                </sidebar-text>
+                <sidebar-text header="Название шага">
+                    Не кликабельная кнопка
+                </sidebar-text>
+            </project-info-block>
         </sidebar-wrapp>
         <navbar-vertical>
             <navbar-vertical-item title="проект"></navbar-vertical-item>
